<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".RegisterUser">

<!--text view for banner-->
<TextView
    android:id="@+id/banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/college_name"
    android:textSize="30sp"
    android:textAlignment="center"
    android:textStyle="bold"
    android:fontFamily="sans-serif-black"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:textColor="@color/purple_700"
    />

<!--text view for message-->
<TextView
    android:id="@+id/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/message"
    android:textSize="18sp"
    android:textAlignment="center"
    app:layout_constraintTop_toBottomOf="@id/banner"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:textColor="@color/purple_700"
    />


<!--edit text for Email-->
<EditText
    android:id="@+id/email"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:hint="Email Address"
    android:inputType="textEmailAddress"
    android:textSize="20sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message"
    />

<!--edit text for Password-->
<EditText
    android:id="@+id/password"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:ems="10"
    android:hint="Password"
    android:inputType="textPassword"
    android:textSize="20sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/email"
    />


<!--button to register our new user-->
<Button
    android:id="@+id/idBtnSignIn"
    android:layout_width="380dp"
    android:layout_height="70dp"
    android:layout_marginTop="20dp"
    android:text="@string/signin"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:onClick="signInButtonClick"
    app:layout_constraintTop_toBottomOf="@+id/password" />

<!--button to register our new user-->
<Button
    android:id="@+id/idBtnSignUp"
    android:layout_width="380dp"
    android:layout_height="70dp"
    android:layout_marginTop="20dp"
    android:text="@string/signup"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:onClick="signUpButtonClick"
    app:layout_constraintTop_toBottomOf="@+id/idBtnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>